--- a/src/sassStyles/_typography.scss
+++ b/src/sassStyles/_typography.scss
@@ -3,3 +3,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Ruthie&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Miltonian&display=swap");
 @import url("https://www.axis-praxis.org/fonts/webfonts/MetaVariableDemo-Set.woff2");
+@import url("https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap");
