--- a/src/sassStyles/_animations.scss
+++ b/src/sassStyles/_animations.scss
@@ -191,3 +191,14 @@
   padding: 0;
   background-color: #111;
 }
+
+@keyframes floaty3 {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-60px);
+  }
+}
