--- a/src/sassStyles/_mixins.scss
+++ b/src/sassStyles/_mixins.scss
@@ -5,44 +5,52 @@
 }
 
 @media screen and (max-width: 768px) {
-  .navTrigger {
-    display: block;
-  }
-  .nav {
-    .logo {
-      margin-left: 15px;
+  .App {
+    .header {
+      .wrapper {
+        padding: 0 10px;
+      }
     }
-    .main_list {
-      width: 100%;
-      height: 0;
-      overflow: hidden;
-      ul {
-        flex-direction: column;
-        width: 100%;
-        height: 100vh;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        background-color: $CodGray;
-        background-position: center top;
-        li {
-          width: 100%;
-          text-align: right;
-          a {
-            text-align: center;
-            width: 100%;
-            font-size: 3rem;
-            padding: 20px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .navbar {
+    #nav {
+      display: block;
+      flex-direction: row;
+      .navlinks {
+        flex-direction: row;
+        a {
+          color: $black;
+          &:hover {
+            color: SpringGreen;
           }
         }
       }
     }
-    .show_list {
-      height: auto;
+    #menu,
+    #menu-bg {
       display: none;
     }
-    .media_button {
-      display: block;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .App {
+    #nav {
+      position: relative;
+      right: 40px;
+      top: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .App {
+    #nav {
+      right: 50%;
+      top: 20px;
     }
   }
 }
