--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,6 +6,7 @@
 .header {
   padding: 5px 0;
   overflow-x: clip;
+  background-color: #436202;
   .wrapper {
     display: flex;
     align-items: center;
@@ -71,7 +72,7 @@
       color: $black;
       font-size: 2.5rem;
       &:hover {
-        color: $SpringGreen;
+        color: #445a17;
       }
     }
   }
@@ -102,7 +103,7 @@
         line-height: 50px;
         font-size: 2rem;
         &:hover {
-          color: $SpringGreen;
+          color: #445a17;
         }
       }
     }
@@ -202,6 +203,7 @@
   top: 0;
   right: 0;
   position: absolute;
+  z-index: 10;
 }
 
 .menu-bg {
@@ -244,7 +246,7 @@
   z-index: -2;
 }
 .light {
-  width: 101%;
+  width: 100%;
 }
 
 .light {
