--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -1,20 +1,24 @@
 .projects-section {
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(68, 90, 23, 1) 100%
-  );
-
-  height: 100vh;
+  padding: 50px 20px;
+  height: 50vh;
+}
+.section {
+  font-size: 20px;
+  h2 {
+    font-size: 40px;
+    border-bottom: 1px solid red;
+  }
 }
 
 .another-section {
-  height: 100vh;
-  background: rgb(255, 48, 48);
-  background: radial-gradient(
-    circle,
-    rgba(68, 90, 23, 1) 0%,
-    rgba(255, 86, 48, 1) 100%
+  height: 50vh;
+  background: rgb(8, 255, 1);
+  background: linear-gradient(
+    0deg,
+    rgba(8, 255, 1, 1) 0%,
+    rgba(176, 41, 41, 1) 3%,
+    rgba(255, 255, 255, 0) 71%,
+    rgba(255, 255, 255, 0) 100%
   );
 }
