--- a/src/sassStyles/_global.scss
+++ b/src/sassStyles/_global.scss
@@ -11,7 +11,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Quicksand", sans-serif;
+  // font-family: "Quicksand", sans-serif;
+  font-family: "Mountains of Christmas", cursive;
   font-size: 62.5%;
   font-size: 10px;
 }
