--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -1,22 +1,27 @@
+@import "../../sassStyles/variables";
+@import "../../sassStyles/mixins";
+@import "../../sassStyles/global";
+@import "../../sassStyles/typography";
+
 .main-section {
   text-align: left;
   height: calc(100vh - 152px);
-  background: rgb(68, 90, 23);
-  background: linear-gradient(
-    0deg,
-    rgba(68, 90, 23, 1) 0%,
-    rgba(168, 193, 118, 0.7903536414565826) 34%,
-    rgba(255, 255, 255, 0) 100%
-  );
-
-  background: rgb(255, 255, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(103, 126, 55, 1) 75%,
-    rgba(67, 98, 2, 1) 100%
-  );
+  // background: rgb(68, 90, 23);
+  // background: linear-gradient(
+  //   0deg,
+  //   rgba(68, 90, 23, 1) 0%,
+  //   rgba(168, 193, 118, 0.7903536414565826) 34%,
+  //   rgba(255, 255, 255, 0) 100%
+  // );
   width: 100%;
+
+  background: var(--gradient1);
+  background: linear-gradient(
+    0deg,
+    var(--gradient2) 0%,
+    var(--gradient3) 75%,
+    var(--gradient4) 100%
+  );
   h1 {
     font-family: "Mountains of Christmas", cursive;
     font-size: 70px;
@@ -37,17 +42,18 @@
     // font-family: "Rochester", cursive;
     .name {
       font-family: "Mountains of Christmas", cursive;
-      color: #feff2f;
+      color: var(--c-text-tertiary);
       font-size: 80px;
     }
+    text-shadow: 2px 2px var(--text-shadow);
   }
   .small-one {
-    color: #fff;
+    color: var(--c-text-primary);
     font-size: 20px;
     display: block;
   }
   .big-one {
-    color: #fff;
+    color: var(--c-text-primary);
     font-size: 70px;
     display: block;
   }
@@ -83,10 +89,9 @@
   display: inline-block;
   background-image: linear-gradient(
     to right,
-    #46d0f2 0%,
-    #8652ff 50%,
-    #f752db 75%,
-    #ffbf52 100%
+    #ffbf52 0%,
+    #b03e49 50%,
+    #e0e0e0 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -96,6 +101,8 @@
   left: 10px;
   bottom: 20px;
   position: relative;
+  padding-right: 20px;
+  text-shadow: none;
 }
 
 .fairy {
@@ -277,9 +284,24 @@
   margin-right: auto;
   //   width: 50%;
 }
-.elf {
+
+.main-character {
   animation: floaty 6s infinite;
   filter: drop-shadow(8px 5px 6px #222);
+  max-width: 100vw;
+}
+.elf {
+  visibility: var(--xmas-mode-visible);
+  display: var(--xmas-mode-display);
+}
+.astro {
+  visibility: var(--dark-mode-visible);
+  display: var(--dark-mode-display);
+}
+
+.developer {
+  visibility: var(--light-mode-visible);
+  display: var(--light-mode-display);
 }
 
 @keyframes floaty {
@@ -362,6 +384,8 @@
   z-index: 0;
   animation: floaty2 9s infinite;
   animation: move-element 5s infinite linear both alternate;
+  visibility: var(--xmas-mode-visible);
+  display: var(--xmas-mode-display);
   img {
     display: block;
     width: 100px;
@@ -377,6 +401,8 @@
   right: 10%;
   z-index: 0;
   animation: move-element 2s infinite linear both alternate;
+  visibility: var(--xmas-mode-visible);
+  display: var(--xmas-mode-display);
   img {
     display: block;
     width: 100px;
@@ -392,6 +418,8 @@
   right: 20%;
   z-index: 0;
   animation: move2-element 4s infinite linear both alternate;
+  visibility: var(--xmas-mode-visible);
+  display: var(--xmas-mode-display);
   img {
     display: block;
     width: 150px;
@@ -405,5 +433,54 @@
     z-index: 0;
     animation: floaty2 9s infinite;
     filter: drop-shadow(8px 5px 6px #222);
+  }
+}
+.moon-container {
+  position: absolute;
+  top: 50%;
+  right: 20%;
+  z-index: 0;
+  animation: move2-element 15s infinite linear both alternate;
+  visibility: var(--dark-mode-visible);
+  display: var(--dark-mode-display);
+  img {
+    display: block;
+    width: 150px;
+    height: auto;
+    animation: rotate-element 20s infinite linear both alternate;
+    filter: drop-shadow(8px 5px 6px #222);
+  }
+}
+
+.spaceship-container {
+  position: absolute;
+  top: 40%;
+  right: 10%;
+  z-index: 0;
+  animation: move-element 10s infinite linear both alternate;
+  visibility: var(--dark-mode-visible);
+  display: var(--dark-mode-display);
+  img {
+    display: block;
+    width: 100px;
+    height: auto;
+    animation: rotate-element 40s infinite linear both alternate;
+    filter: drop-shadow(8px 5px 6px #222);
+  }
+  &.spaceship2 {
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    z-index: 0;
+    animation: move-element 10s infinite linear both alternate;
+    visibility: var(--dark-mode-visible);
+    display: var(--dark-mode-display);
+    img {
+      display: block;
+      width: 100px;
+      height: auto;
+      animation: rotate-element 40s infinite linear both alternate;
+      filter: drop-shadow(8px 5px 6px #222);
+    }
   }
 }
