--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -5,20 +5,13 @@
 }
 .section {
   font-size: 20px;
+  font-family: "Germania One", cursive;
+
   h2 {
     font-size: 40px;
     border-bottom: 1px solid red;
+    margin: 20px 40px;
+    text-align: left;
+    text-shadow: 2px 2px #980f0f;
   }
-}
-
-.another-section {
-  height: 50vh;
-  background: rgb(8, 255, 1);
-  background: linear-gradient(
-    0deg,
-    rgba(8, 255, 1, 1) 0%,
-    rgba(176, 41, 41, 1) 3%,
-    rgba(255, 255, 255, 0) 71%,
-    rgba(255, 255, 255, 0) 100%
-  );
 }
