--- a/src/sassStyles/_mixins.scss
+++ b/src/sassStyles/_mixins.scss
@@ -1,3 +1,5 @@
+@import "./global";
+
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .container {
     margin: 0;
@@ -22,11 +24,14 @@
       .navlinks {
         flex-direction: row;
         a {
-          color: $white;
+          color: var(--c-text-primary);
           font-weight: bold;
+          transition: all 0.5s ease;
+          text-shadow: 2px 2px var(--text-shadow);
           &:hover {
-            color: #feff2f;
+            color: var(--c-text-tertiary);
             text-decoration: underline;
+            transition: all 0.5s ease;
           }
         }
       }
@@ -93,6 +98,60 @@
         }
       }
     }
+    .candy-container {
+      img {
+        width: 80px;
+      }
+    }
+    .toy-container {
+      img {
+        width: 60px;
+      }
+    }
+    .sock-container {
+      img {
+        width: 80px;
+      }
+    }
+  }
+  .contact-form {
+    .field {
+      &.name {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+      }
+      &.mail {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 2;
+      }
+      &.message {
+        grid-column-start: 4;
+        grid-column-end: 1;
+        grid-row-start: 3;
+        grid-row-end: 3;
+      }
+      &.send {
+        grid-column-start: 3;
+        grid-column-end: 1;
+        grid-row-start: 5;
+        grid-row-end: 5;
+        input {
+          line-height: 30px;
+        }
+      }
+    }
+  }
+  .section {
+    h2 {
+      font-size: 30px !important;
+    }
+    h3 {
+      font-size: 28px !important;
+    }
   }
 }
 
@@ -115,11 +174,11 @@
       h1 {
         width: 80%;
         .name {
-          font-size: 38px;
+          font-size: 36px;
         }
         .big-one {
-          font-size: 30px;
-          margin-top: 20px;
+          font-size: 28px;
+          margin-top: 14px;
         }
         .small-one {
           font-size: 20px;
@@ -128,7 +187,7 @@
       .right-side {
         width: 45%;
         .big-one {
-          font-size: 16px;
+          font-size: 14px;
         }
       }
     }
