--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,26 +1,25 @@
 .contact-section {
   min-height: 50vh;
   text-align: left;
-  font-family: "Germania One", cursive;
+  font-family: var(--font-family-1);
   position: relative;
-  background: rgb(67, 98, 2);
+  background: var(--bottom-gradient1);
   background: linear-gradient(
     0deg,
-    rgba(67, 98, 2, 1) 0%,
-    rgba(180, 189, 158, 0.6839110644257703) 86%,
-    rgba(255, 255, 255, 0) 100%
+    var(--bottom-gradient2) 0%,
+    var(--bottom-gradient3) 86%,
+    var(--bottom-gradient4) 100%
   );
   h2 {
     font-size: 44px;
-    margin: 20px 40px;
-    text-shadow: 2px 2px #980f0f;
+    text-shadow: 2px 2px var(--text-shadow);
   }
 
   h3 {
     font-size: 40px;
-    margin: 20px 40px;
-    text-shadow: 2px 2px #980f0f;
-    color: #efb822;
+    text-shadow: 2px 2px var(--text-shadow);
+    color: var(--c-text-tertiary);
+    margin: 20px 0;
   }
 }
 
@@ -28,12 +27,12 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 100px;
-  margin: 10px 20px;
+  //   margin: 10px 20px;
   margin-bottom: 0;
   label {
     padding-bottom: 10px;
-    text-shadow: 2px 2px #980f0f;
-    color: #ffffff;
+    text-shadow: 2px 2px (--text-shadow);
+    color: var(--c-text-primary);
   }
 
   input {
@@ -73,12 +72,13 @@
 .field {
   display: grid;
   align-content: start;
-  margin: 0 20px;
+  //   margin: 0 20px;
   &.name {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
+    margin-right: 40px;
   }
   // &.mail {
   //   order: 2;
