--- a/src/sassStyles/_typography.scss
+++ b/src/sassStyles/_typography.scss
@@ -5,4 +5,4 @@
 @import url("https://www.axis-praxis.org/fonts/webfonts/MetaVariableDemo-Set.woff2");
 @import url("https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rochester&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Germania+One&family=Rochester&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Germania+One&family=Open+Sans&family=Orbitron&family=Rochester&family=Ubuntu+Mono&display=swap");
