--- a/src/sassStyles/_global.scss
+++ b/src/sassStyles/_global.scss
@@ -97,7 +97,7 @@ body {
     --c-text-primary: #191919;
     --c-text-secondary: #737374;
     --c-border-primary: #ccc;
-    --c-text-tertiary: #daaf08;
+    --c-text-tertiary: #fec470;
     --c-bg-body: #ccc;
     --c-bg-primary: #fff;
     --c-bg-secondary: #d4d8dd;
