--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -19,6 +19,7 @@
   }
   .header-logo {
     flex-shrink: 0;
+    z-index: 2;
     img {
       width: 100px;
       height: auto;
@@ -278,6 +279,18 @@
   margin: 0 auto;
   visibility: var(--dark-mode-visible);
   display: var(--dark-mode-display);
+}
+
+#oldpc {
+  position: absolute;
+  width: 50px;
+  height: auto;
+  top: 70px;
+  left: 70px;
+  right: 0;
+  margin: 0 auto;
+  visibility: var(--light-mode-visible);
+  display: var(--light-mode-display);
 }
 
 .light {
