--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -95,6 +95,7 @@
     grid-column-end: 1;
     grid-row-start: 4;
     grid-row-end: 4;
+    margin-right: 40px;
     input {
       // width: 400px;
       height: 40px;
