--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -1,6 +1,5 @@
 .projects-section {
   background: var(--gradient1);
-  height: 50vh;
 }
 .section {
   padding: 50px 40px;
@@ -11,10 +10,183 @@
   h2 {
     font-size: 40px;
     color: var(--c-text-secondary);
-
     border-bottom: 1px solid var(--text-shadow);
-    // margin: 20px 40px;
     text-align: left;
     text-shadow: 2px 2px var(--text-shadow);
+    margin-bottom: 40px;
   }
+}
+
+//mobile with slider
+.projects {
+  color: var(--c-text-secondary);
+  text-align: left;
+  width: 100%;
+  .project-card {
+    width: 300px;
+    height: 316px;
+    padding: 20px;
+    background: var(--c-bg-primary);
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    align-items: baseline;
+    border: 1px solid #ebebeb;
+  }
+
+  .img-container {
+    width: 100%;
+    height: 165px;
+    img {
+      width: 100%;
+      height: 160px;
+      border-radius: 3px;
+    }
+  }
+  .card-body {
+    width: 100%;
+  }
+  .card-title {
+    width: 100%;
+    height: 30px;
+    overflow: hidden;
+    border-bottom: 1px solid var(--c-text-secondary);
+    h4 {
+      word-break: break-all;
+      overflow: hidden;
+      line-height: 30px;
+      color: var(--c-text-primary);
+    }
+  }
+  .card-info {
+    font-size: 12px;
+    .desc {
+      display: block;
+      height: 30px;
+      overflow: hidden;
+      margin: 6px 0;
+      color: var(--c-text-primary);
+    }
+    .card-tech {
+      height: 16px;
+      line-height: 16px;
+      overflow: hidden;
+      color: var(--c-text-tertiary);
+      margin-bottom: 4px;
+    }
+  }
+  .card-footer {
+    font-size: 14px;
+    display: flex;
+    justify-content: space-between;
+    a {
+      color: var(--c-text-primary);
+      border: 1px solid var(--c-text-primary);
+      padding: 1px 20px;
+      border-radius: 4px;
+      text-decoration: none;
+    }
+  }
+}
+
+//desktop without slider
+.regular {
+  color: var(--c-text-secondary);
+  text-align: left;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 32%);
+  grid-template-rows: repeat(3, auto);
+  justify-items: stretch;
+  grid-auto-flow: row;
+  gap: 20px;
+  // justify-content: space-between;
+  justify-content: space-evenly;
+
+  .project-card {
+    width: 300px;
+    height: 316px;
+    padding: 20px;
+    background: var(--c-bg-primary);
+    border-radius: 6px;
+    border: 1px solid #ebebeb;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    align-items: baseline;
+  }
+
+  .img-container {
+    width: 100%;
+    height: 165px;
+    img {
+      width: 100%;
+      height: 160px;
+      border-radius: 3px;
+    }
+  }
+  .card-body {
+    width: 100%;
+  }
+  .card-title {
+    width: 100%;
+    height: 30px;
+    overflow: hidden;
+    border-bottom: 1px solid var(--c-text-secondary);
+    h4 {
+      word-break: break-all;
+      overflow: hidden;
+      line-height: 30px;
+      color: var(--c-text-primary);
+    }
+  }
+  .card-info {
+    font-size: 12px;
+    .desc {
+      display: block;
+      height: 30px;
+      overflow: hidden;
+      margin: 6px 0;
+      color: var(--c-text-primary);
+    }
+    .card-tech {
+      height: 16px;
+      line-height: 16px;
+      overflow: hidden;
+      color: var(--c-text-tertiary);
+      margin-bottom: 4px;
+    }
+  }
+  .card-footer {
+    font-size: 14px;
+    display: flex;
+    justify-content: space-between;
+    a {
+      color: var(--c-text-primary);
+      border: 1px solid var(--c-text-primary);
+      padding: 1px 20px;
+      border-radius: 4px;
+      text-decoration: none;
+      font-size: 12px;
+      &:hover {
+        // color: var(--c-text-secondary);
+        border: 1px solid var(--c-text-secondary);
+      }
+    }
+  }
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: var(--c-text-secondary);
+}
+
+.slick-list {
+  margin: 0 -5px;
+}
+.slick-slide > div {
+  padding: 0 5px;
 }
